# Healthcare_Appointment

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  System_Design.md  docker-compose.yml
backend/: celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check_appts.py  check_db.py  check_doctors.py  check_users.py  pyproject.toml  seed_slots.py
backend/alembic/: env.py
backend/alembic/versions/: 75c3a458603e_initial_schema.py  8caeec00801b_add_google_oauth_tokens.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/admin/: router.py  schemas.py  service.py
backend/app/ai/: schemas.py  service.py  tasks.py
backend/app/appointment/: router.py  schemas.py  service.py  tasks.py
backend/app/auth/: dependencies.py  router.py  schemas.py  security.py  service.py
backend/app/calendar/: router.py  tasks.py
backend/app/consultation/: router.py  schemas.py  service.py
backend/app/doctor/: router.py  schemas.py  service.py
backend/app/models/: __init__.py  appointment.py  base.py  calendar_event.py  consultation.py  notification.py  schedule.py  slot.py  specialization.py  user.py
backend/app/notifications/: email.py  service.py  tasks.py
backend/app/patient/: router.py  schemas.py  service.py
backend/app/schemas/: common.py  enums.py
backend/app/specialization/: router.py
backend/app/templates/email/: appointment_reminder.html  booking_confirmation.html  cancellation.html  consultation_completed.html  leave_notification.html  medication_reminder.html  reschedule.html
backend/scripts/: seed_db.py
frontend/: index.html  (+5 more)
(+37 files in other folders)
