[project]
name = "healthcare-appointment-manager-backend"
version = "0.1.0"
description = "FastAPI backend for Healthcare Appointment Manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.7.4",
    "pydantic-settings>=2.3.4",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "celery>=5.4.0",
    "redis>=5.0.7",
    "bcrypt<4.0.0",
    "pyjwt>=2.13.0",
    "google-genai>=2.11.0",
    "fastapi-mail>=1.6.5",
    "jinja2>=3.1.6",
    "google-auth>=2.55.2",
    "google-auth-oauthlib>=1.4.0",
    "google-api-python-client>=2.198.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ['py312']
